# surface_curvature

./: .gitignore  .pdm-python  .pdm.toml  README.md  insertionloss.ipynb  mean_curvature.ipynb  part_deriv_deform.py  principal_curvature.ipynb  pyproject.toml  surf_curvature.ipynb  test.ipynb
examples/: DiffGeoOps.ipynb  KeenanCraneLect15.ipynb  deformation.ipynb  discrete_shape.ipynb  discrete_shape_monge.ipynb  discrete_shape_parametric.ipynb  gaussian_distribution_test.ipynb  gaussian_distribution_toy.ipynb  linear_least_sq_fit.ipynb  tests.ipynb
examples/OpenCL/: blur.cl  curvature_pyopencl.html  curvature_pyopencl.ipynb  gradient_2d.cl  gray.cl  mean_curvature.cl
meshes/: cylindroid.off  moebius.off  torus.off
src/surface_curvature/: __init__.py  discrete.py  symbolic.py
src/surface_curvature.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_discrete.py  test_doctest.py  test_symbolic.py
