[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "phcreery", email = "phcreery@gmail.com"},
]
dependencies = [
    "ipykernel>=6.22.0",
    "pandas>=2.0.0",
    "numpy>=1.24.2",
    "sympy>=1.11.1",
    "matplotlib>=3.7.1",
    "setuptools>=67.6.1",
    "ipywidgets>=8.0.6",
    "plotly>=5.14.1",
    "nbformat>=5.8.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
